tests/typecheck/fail/extern_unsafe_boundary.tw
// Extern declarations reject compound boundary types in Phase 1.

extern "host" fn send(xs: Vector<Int>)
